--- a/yamcs-maven-plugin/src/site/apt/usage.apt.vm
+++ b/yamcs-maven-plugin/src/site/apt/usage.apt.vm
@@ -32,16 +32,18 @@ myproject/
         |-- java
         |   `-- com
         |       `-- mycompany
-        |           `-- MyCustomTmLink.java
         `-- yamcs
             |-- etc
+            |   |-- processor.yaml
             |   |-- yamcs.example.yaml
             |   `-- yamcs.yaml
             `-- mdb
-                `-- xtce.xml
+                |-- BogusSAT-1.xml
+                |-- BogusSAT-2.xml
+                `-- ccsds-green-book.xml
 ------------------------------------------
 
-  * Custom java classes go into <<<$\{project.basedir\}/src/main/java/>>>.
+  * Custom java classes (if any) go into <<<$\{project.basedir\}/src/main/java/>>>.
 
   * Yamcs configuration goes into <<<$\{project.basedir\}/src/main/yamcs/>>> in subfolders <<<etc/>>> and <<<mdb/>>>.
 
